--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -300,3 +300,25 @@
       rgba(255, 50, 50, 0) 75%);
   z-index: 1;
 }
+
+
+
+
+/* scroll style */
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: inherit;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(170, 170, 170, 0.661);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #8e8e8eb9;
+  box-shadow: inset 0 0 6px #888;
+}
