--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -307,7 +307,8 @@
 /* scroll style */
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
+  height: 7px;
 }
 
 ::-webkit-scrollbar-track {
@@ -315,7 +316,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(217, 217, 217, 0.661);
+  background: rgb(207, 206, 206);
 }
 
 ::-webkit-scrollbar-thumb:hover {
