--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -323,3 +323,44 @@
   background: #8e8e8eb9;
   box-shadow: inset 0 0 6px #888;
 }
+
+/* .dark-scroll */
+.dark-scroll::-webkit-scrollbar {
+  width: 6px;
+  height: 7px;
+}
+
+.dark-scroll::-webkit-scrollbar-track {
+  background-color: inherit;
+}
+
+.dark-scroll::-webkit-scrollbar-thumb {
+  background: rgb(56, 56, 56);
+}
+
+.dark-scroll::-webkit-scrollbar-thumb:hover {
+  background: #8e8e8eb9;
+  box-shadow: inset 0 0 6px #888;
+}
+
+
+/* excalidraw customizations */
+
+.layer-ui__wrapper__top-right {
+  display: none !important;
+}
+
+.main-menu-trigger {
+  display: none !important;
+
+}
+
+.selected-shape-actions {
+  margin-top: 50px;
+
+}
+
+.layer-ui__wrapper__footer-right {
+  display: none !important;
+
+}
