--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -498,3 +498,8 @@ article,
 .react-flow svg {
   overflow: visible !important;
 }
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding: 200px;
+}
