--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,26 +42,26 @@
     --chart-5: 27 87% 67%;
   }
 
-  .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
+  .d .dark {
+    --background: 222 13% 10%;
+    --foreground: 220 14% 96%;
+    --card: 222 10% 15%;
+    --card-foreground: 220 14% 96%;
+    --popover: 222 10% 15%;
+    --popover-foreground: 220 14% 96%;
+    --primary: 220 14% 96%;
+    --primary-foreground: 222 13% 10%;
+    --secondary: 222 10% 20%;
+    --secondary-foreground: 220 14% 96%;
+    --muted: 222 10% 20%;
+    --muted-foreground: 220 8% 70%;
+    --accent: 222 10% 20%;
+    --accent-foreground: 220 14% 96%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
+    --border: 222 10% 25%;
+    --input: 222 10% 25%;
+    --ring: 222 13% 10%;
     --chart-1: 220 70% 50%;
     --chart-5: 160 60% 45%;
     --chart-3: 30 80% 55%;
